fix colors and z-index on search btn on nav menu

--- a/src/assets/styles/components/_menu.scss
+++ b/src/assets/styles/components/_menu.scss
@@ -66,6 +66,10 @@
  .widget-header{
    .icontext,
    .input-group{
+      button{
+
+          z-index: 100000;
+      }
       .icon-sm{
           background: #fff;
             color: $primary;
